# giskard-hub

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  package-lock.json  pyproject.toml  renovate.json  ruff.toml
.github/workflows/: ci.yml  create-release.yml  update-docs.yml
docs/: 404.html  CNAME  README.html  _rediraffe_redirected.json  cli.html  conf.py  genindex.html  index.html  objects.inv  py-modindex.html  quickstart.html  search.html  searchindex.js  sources.html  toctree.html  toctree_hub_sdk.html  toctree_hub_ui.html  toctree_oss.html
docs/_sources/: README.md.txt  cli.rst.txt  index.md.txt  index.rst.txt  quickstart.rst.txt  toctree.rst.txt  toctree_hub_sdk.rst.txt  toctree_hub_ui.rst.txt  toctree_oss.rst.txt
docs/_sources/cli/: quickstart.rst.txt
docs/_sources/examples/: example.ipynb.txt
docs/_sources/guide/: local-evaluation.rst.txt  run-evaluations.rst.txt
docs/_sources/start/: comparison.rst.txt  release_notes.rst.txt
docs/_static/: custom.css  custom.js
docs/cli/: quickstart.html
docs/cli/guide/: custom-checks.html  local-evaluation.html  manage-datasets.html  run-evaluations.html
docs/cli/reference/: client.html  index.html
docs/examples/: example.html  example.sh  example_python.py
docs/guide/: local-evaluation.html  manage-datasets.html  run-evaluations.html
docs/hub/: glossary.html  quickstart.html
docs/hub/guide/: access-rights.html  annotate.html  compare-evaluations.html  continuous-red-teaming.html  create-custom-checks.html  create-dataset.html  generate-dataset.html  manage-datasets.html  playground.html  run-evaluations.html
docs/hub/sdk/: checks.html  evaluations.html  index.html  projects.html  scans.html
docs/hub/ui/: access-rights.html  annotate.html  continuous-red-teaming.html  evaluations-compare.html  evaluations.html  event-logs.html  index.html
docs/oss/notebooks/: index.html
docs/oss/sdk/: business.html  index.html  legacy.html  security.html
docs/reference/: client.html  index.html
docs/reference/entities/: index.html
docs/reference/resources/: index.html
docs/start/: comparison.html  enterprise-trial.html  glossary.html  release_notes.html
docs/start/glossary/: index.html  testing_methodologies.html
examples/: example.ipynb  example_python.py
new-docs/: conf.py  index.rst
new-docs/_static/: custom.css
new-docs/hub/sdk/: checks.rst  evaluations.rst  index.rst  projects.rst
new-docs/hub/ui/: annotate.rst  index.rst
new-docs/oss/notebooks/: index.rst
new-docs/oss/sdk/: business.rst  index.rst  outdated.rst  security.rst
new-docs/sphinx_ext/: fix_dataclass.py
new-docs/start/: comparison.rst  enterprise-trial.rst  free-enterprise-trial.rst  glossary.rst
old-docs/: conf.py  index.rst
old-docs/_static/: custom.css
old-docs/cli/: quickstart.rst
old-docs/cli/guide/: custom-checks.rst
old-docs/hub/: glossary.rst  quickstart.rst
old-docs/hub/guide/: access-rights.rst  annotate.rst  continuous-red-teaming.rst
script-docs/: 404.html  404.rst  Makefile  README.md  cli.rst  conf.py  index.md  index.rst  launch_docs.sh  quickstart.rst  sources.rst  toctree.rst  toctree_hub_sdk.rst  toctree_hub_ui.rst  toctree_oss.rst  toctree_utils.py
script-docs/_static/: custom.css  custom.js  sidebar-scroll.js
script-docs/_templates/: base.html  sidebar_hub_sdk.html  sidebar_hub_ui.html  sidebar_oss_sdk.html  sidebar_start.html
script-docs/cli/: quickstart.rst
script-docs/cli/guide/: custom-checks.rst  manage-datasets.rst  run-evaluations.rst  run-scans.rst
script-docs/cli/reference/: client.rst  index.rst
script-docs/guide/: local-evaluation.rst  manage-datasets.rst  run-evaluations.rst
script-docs/hub/: glossary.rst  quickstart.rst  release_notes.rst.inc
script-docs/hub/guide/: access-rights.rst  annotate.rst  compare-evaluations.rst  continuous-red-teaming.rst  create-custom-checks.rst  create-dataset.rst  generate-dataset.rst  manage-datasets.rst  playground.rst  run-evaluations.rst
script-docs/hub/sdk/: checks.rst  evaluations.rst  index.rst  projects.rst  run-scans.rst  scans.rst  toctree.rst
script-docs/hub/ui/: access-rights.rst  annotate.rst  continuous-red-teaming.rst  evaluations-compare.rst  evaluations.rst  event-logs.rst  graph.rst.inc  index.rst
script-docs/oss/notebooks/: index.rst
script-docs/oss/sdk/: business.rst  index.rst  legacy.rst  security.rst
script-docs/sphinx_ext/: footer_extension.py
script-docs/start/: comparison.rst  enterprise-trial.rst  glossary.rst
script-docs/start/glossary/: index.rst  testing_methodologies.rst
script-docs/tutorials/: index.rst  local-evaluation.rst
source/: .gitignore  conf.py  index.rst
source/_static/: custom.js  pygments-dark.css
source/hub/sdk/: checks.rst  evaluations.rst  projects.rst  scans.rst
source/hub/ui/: access-rights.rst  annotate.rst  evaluations.rst  index.rst
source/oss/notebooks/: index.rst
source/oss/sdk/: business.rst  index.rst  legacy.rst  security.rst
source/start/: comparison.rst  enterprise-trial.rst
source/start/glossary/: index.rst  testing_methodologies.rst
src/giskard_hub/: __init__.py  _base_client.py  _default_client.py  _evaluation.py  cli.py  client.py  data.py  errors.py
src/giskard_hub/data/: __init__.py  _base.py  _entity.py  chat.py  chat_test_case.py  check.py  conversation.py  dataset.py  evaluation.py  knowledge_base.py  model.py  project.py  scan.py  scheduled_evaluation.py  task.py
src/giskard_hub/resources/: __init__.py  _resource.py  _utils.py  chat_test_cases.py  checks.py  conversations.py  datasets.py  evaluations.py  models.py  (+5 more)
tests/: test_chat_message.py  test_chat_test_cases.py  test_checks.py  test_client_agents_models.py  test_conversations.py  test_datasets.py  test_errors.py  test_evaluations.py  test_knowledge_base.py  test_knowledge_bases.py  test_model_output.py  test_probe.py  test_probes.py  test_projects.py  test_scan.py  test_scans.py  test_scheduled_evaluations.py
(+362 files in other folders)
