[project]
name = "giskard-hub"
version = "2.1.0"
description = "The giskard_hub library allows you to interact with the Giskard Hub, a platform that centralizes the validation process of LLM applications, empowering product teams to ensure all functional, business & legal requirements are met, and keeping them in close contact with the development team to avoid delayed deployment timelines."
authors = [
    {name = "Giskard Team", email = "hello@giskard.ai"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "httpx>=0.27.0,<1",
    "rich>=13.7.1",
    "python-dateutil>=2.9.0.post0",
]

[dependency-groups]
dev = [
    "black[jupyter]==25.9.0",
    "isort==7.0.0",
    "pylint==4.0.3",
    "pytest==9.0.1",
]
docs = [
    "sphinxawesome-theme==5.3.2; python_version>='3.12'",
    "myst-parser==4.0.1; python_version>='3.12'",
    "notebook==7.4.7",
    "nbsphinx==0.9.7; python_version>='3.12'",
    "sphinx-click==6.1.0; python_version>='3.12'",
    "sphinx-autobuild==2025.8.25; python_version>='3.12'",
    "sphinx-autodoc-typehints==2.3.0; python_version>='3.12'",
    "sphinx-design==0.6.1; python_version>='3.12'",
    "sphinx-tabs>=3.4.7; python_version>='3.12'",
    "sphinxext-opengraph[social_cards]>=0.12.0; python_version>='3.12'",
    "sphinx-notfound-page>=1.1.0; python_version>='3.12'",
    "pandoc>=2.4",
    "giskard[llm]==2.18.0; python_version>='3.10' and python_version<'3.13'",
    "pyarrow<22.0.1; python_version>='3.12'",
    "ragas>=0.3.7,<=0.3.7",
    "ipywidgets>=8.1.7",
    "torch>=2.8.0",
    "sphinx-autobuild>=2024.10.3",
]

[project.urls]
Homepage = "https://github.com/Giskard-AI/giskard-hub"
Repository = "https://github.com/Giskard-AI/giskard-hub"
Documentation = "https://docs.giskard.ai/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/giskard_hub"]

[tool.isort]
profile = "black"
extend_skip_glob = [".history/*"]

[tool.pylint.master]
fail-under = "10"

[tool.pylint.reports]
reports = "y"
output-format = "colorized"

[tool.pylint.'MESSAGES CONTROL']
disable = "missing-function-docstring,missing-class-docstring,missing-module-docstring,line-too-long,too-few-public-methods"
enable = ["useless-suppression", "use-symbolic-message-instead"]

[[tool.uv.index]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
# Use CPU-only PyTorch for non-macOS systems, default PyPI for macOS
torch = { index = "pytorch_cpu", marker = "platform_system != 'Darwin'" }

