[project]
name = "giskard-docs"
version = "0.1.0"
description = "The giskard documentation"
authors = [
    {name = "Giskard Team", email = "hello@giskard.ai"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = []

[dependency-groups]
dev = [
    "sphinxawesome-theme==5.3.2; python_version>='3.12'",
    "myst-parser==4.0.1; python_version>='3.12'",
    "notebook==7.4.7",
    "nbsphinx==0.9.7; python_version>='3.12'",
    "sphinx-click==6.1.0; python_version>='3.12'",
    "sphinx-autobuild==2025.8.25; python_version>='3.12'",
    "sphinx-autodoc-typehints==2.3.0; python_version>='3.12'",
    "sphinx-design==0.6.1; python_version>='3.12'",
    "sphinx-tabs>=3.4.7; python_version>='3.12'",
    "sphinxext-opengraph[social_cards]>=0.12.0; python_version>='3.12'",
    "sphinx-notfound-page>=1.1.0; python_version>='3.12'",
    "pandoc>=2.4",
    "giskard[llm]==2.18.0; python_version>='3.10' and python_version<'3.13'",
    "pyarrow<21.0.1; python_version>='3.12'",
    "ragas>=0.3.7,<=0.3.7",
    "ipywidgets>=8.1.7",
    "torch>=2.8.0",
    "sphinx-autobuild>=2024.10.3",
]

[project.urls]
Homepage = "https://github.com/Giskard-AI/giskard-hub"
Repository = "https://github.com/Giskard-AI/giskard-hub"
Documentation = "https://docs.giskard.ai/"

[[tool.uv.index]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
# Use CPU-only PyTorch for non-macOS systems, default PyPI for macOS
torch = { index = "pytorch_cpu", marker = "platform_system != 'Darwin'" }

